# SC4002-NLP

./: .gitignore  Code.ipynb  Part_2_validation_acc_opt_model.csv  README.md  common_utils.py  part_0.ipynb  part_1.ipynb  part_2.ipynb  part_2_bh.ipynb  part_2_mask.ipynb  part_2_mask_max.ipynb  part_2_mask_max_sorted.ipynb  part_2_no_mask.ipynb  part_2_sh.ipynb  part_2_tk.ipynb  part_2_total.ipynb  part_3-wy.ipynb  part_3.ipynb  part_3_BiGRU.ipynb  part_3_GRU_LSTM_wSelfAttn.ipynb  part_3_a_b.ipynb  part_3_c_biLSTM_naive.ipynb  part_3_f.ipynb  part_3_keen.ipynb  part_3_kian.ipynb  part_3_tk.ipynb  pyproject.toml  results_nicole_find_optimal_params_mask_max_sorted.pkl
project/: part_2.ipynb  part_3_c_BiGRU.ipynb  pyproject.toml
report/: report.fdb_latexmk  report.fls  report.tex
result/: embedding_matrix.npy  idx2word.json  vocab.json  word2idx.json
