[tool.poetry]
name = "sc4002-nlp"
version = "0.1.0"
description = ""
authors = ["HiIAmTzeKean <ngtzekean@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.1"
ipykernel = "^6.29.5"
nltk = "^3.9.1"
torch = "^2.4.1"
iprogress = "^0.4"
torchviz = "^0.0.2"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
